// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformations 1`] = `
{
  "avgDailyPopulation": 54,
  "caseloadCategory": "SEX_OFFENSE",
  "displayName": "Walter Harris",
  "externalId": "OFFICER4",
  "fullName": {
    "givenNames": "Walter",
    "surname": "Harris",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [
    {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.098509819,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0.094708509819,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.0843280708509819,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.1018842831,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.11247207457052615,
          "status": "FAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.10630035918842831,
          "status": "FAR",
        },
      ],
    },
    {
      "metricId": "incarceration_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.023395936157938592,
          "status": "MET",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.4331242583488727,
          "status": "FAR",
        },
      ],
    },
    {
      "metricId": "treatment_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.022968597032909103,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.027919749790220463,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.032353114502917085,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.03232644409114997,
          "status": "NEAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.028747594548953384,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so1",
  "supervisorExternalIds": [
    "agonzalez123",
    "dlee456",
  ],
  "topXPctMetrics": [],
  "zeroGrantOpportunities": [
    "LSU",
    "pastFTRD",
  ],
}
`;

exports[`transformations 2`] = `
{
  "avgDailyPopulation": 12,
  "caseloadCategory": "ALL",
  "displayName": "Jack Hernandez",
  "externalId": "so2",
  "fullName": {
    "givenNames": "Jack",
    "surname": "Hernandez",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [],
  "pseudonymizedId": "hashed-so2",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
  "topXPctMetrics": [
    {
      "metricId": "treatment_starts",
      "topXPct": 10,
    },
  ],
}
`;

exports[`transformations 3`] = `
{
  "avgDailyPopulation": 32,
  "caseloadCategory": "ALL",
  "displayName": "Jason Nelson",
  "externalId": "so3",
  "fullName": {
    "givenNames": "Jason",
    "surname": "Nelson",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [
    {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.154553,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0.109407,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.12125238767544223,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.1466368227731864,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.110487,
          "status": "FAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.11521464646464646,
          "status": "FAR",
        },
      ],
    },
    {
      "metricId": "treatment_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.022968597032909103,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.027919749790220463,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.032353114502917085,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.03232644409114997,
          "status": "NEAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.028747594548953384,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so3",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
  "topXPctMetrics": [],
}
`;

exports[`transformations 4`] = `
{
  "avgDailyPopulation": 43,
  "caseloadCategory": "ALL",
  "displayName": "Carl Mark Campbell",
  "externalId": "so4",
  "fullName": {
    "givenNames": "Carl",
    "middleNames": "Mark",
    "surname": "Campbell",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [
    {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.06283,
          "status": "NEAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0.088881,
          "status": "NEAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.109407,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.110487,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.154553,
          "status": "FAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.1604677745537677,
          "status": "FAR",
        },
      ],
    },
    {
      "metricId": "treatment_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.022968597032909103,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.027919749790220463,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.032353114502917085,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.03232644409114997,
          "status": "NEAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.028747594548953384,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so4",
  "supervisorExternalIds": [
    "dlee456",
  ],
  "topXPctMetrics": [],
}
`;

exports[`transformations 5`] = `
{
  "avgDailyPopulation": 5,
  "caseloadCategory": "ALL",
  "displayName": "Casey Ramirez",
  "externalId": "so5",
  "fullName": {
    "givenNames": "Casey",
    "surname": "Ramirez",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [],
  "pseudonymizedId": "hashed-so5",
  "supervisorExternalIds": [
    "rsmith789",
  ],
  "topXPctMetrics": [],
}
`;

exports[`transformations 6`] = `
{
  "avgDailyPopulation": 43,
  "caseloadCategory": "ALL",
  "displayName": "Elizabeth Ramirez",
  "externalId": "so8",
  "fullName": {
    "givenNames": "Elizabeth",
    "surname": "Ramirez",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [
    {
      "metricId": "treatment_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.022968597032909103,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.027919749790220463,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.032353114502917085,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.03232644409114997,
          "status": "NEAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.028747594548953384,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so8",
  "supervisorExternalIds": [
    "rsmith789",
  ],
  "topXPctMetrics": [],
}
`;

exports[`transformations 7`] = `
{
  "avgDailyPopulation": 43,
  "caseloadCategory": "ALL",
  "displayName": "Harriet Boyd",
  "externalId": "so9",
  "fullName": {
    "givenNames": "Harriet",
    "surname": "Boyd",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [
    {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.154553,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0.109407,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.12125238767544223,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.1466368227731864,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.110487,
          "status": "FAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.11521464646464646,
          "status": "FAR",
        },
      ],
    },
    {
      "metricId": "incarceration_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.020006029214283755,
          "status": "MET",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.4224537037037037,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so9",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
  "topXPctMetrics": [],
}
`;

exports[`transformations 8`] = `
{
  "avgDailyPopulation": 43,
  "caseloadCategory": "NOT_SEX_OFFENSE",
  "displayName": "Stephen Mann",
  "externalId": "so10",
  "fullName": {
    "givenNames": "Stephen",
    "surname": "Mann",
  },
  "includeInOutcomes": true,
  "outlierMetrics": [
    {
      "metricId": "absconsions_bench_warrants",
      "statusesOverTime": [
        {
          "endDate": 2021-07-01T00:00:00.000Z,
          "metricRate": 0.154553,
          "status": "FAR",
        },
        {
          "endDate": 2021-08-01T00:00:00.000Z,
          "metricRate": 0.109407,
          "status": "FAR",
        },
        {
          "endDate": 2021-09-01T00:00:00.000Z,
          "metricRate": 0.12125238767544223,
          "status": "FAR",
        },
        {
          "endDate": 2021-10-01T00:00:00.000Z,
          "metricRate": 0.1466368227731864,
          "status": "FAR",
        },
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.110487,
          "status": "FAR",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.11521464646464646,
          "status": "FAR",
        },
      ],
    },
    {
      "metricId": "incarceration_starts",
      "statusesOverTime": [
        {
          "endDate": 2021-11-01T00:00:00.000Z,
          "metricRate": 0.020006029214283755,
          "status": "MET",
        },
        {
          "endDate": 2021-12-01T00:00:00.000Z,
          "metricRate": 0.4224537037037037,
          "status": "FAR",
        },
      ],
    },
  ],
  "pseudonymizedId": "hashed-so10",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
  "topXPctMetrics": [],
}
`;
